tests/negative/neg_pr116_legacy_end_if.safe
package neg_PR116_Legacy_End_If

   function broken returns integer

      if True
         return 1;

      end if
